update react code 30/5/2025

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="/css/style.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,7 +27,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background: #3e4657; color: #fff;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +40,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <svg id="crtBgShape1" class="hidden-sm hidden-xs" height="519" width="758">
+      <polygon class="pol" points="0,455,693,352,173,0,92,0,0,71"></polygon>
+  </svg>
+
+  <svg id="crtBgShape2" class="hidden-sm hidden-xs" height="536" width="633">
+    <polygon points="0,0,633,0,633,536"></polygon>
+</svg>
   </body>
 </html>
